Adding license and readme

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -30,6 +30,6 @@
         <env name="BRAINTREE_MERCHANT_ID" value=""/>
         <env name="BRAINTREE_PUBLIC_KEY" value=""/>
         <env name="BRAINTREE_PRIVATE_KEY" value=""/>
-        <env name="BRAINTREE_MODEL" value="Laravel\Cashier\Tests\User"/>
+        <env name="BRAINTREE_MODEL" value="Jartaud\LaravelBraintreeSubscription\Tests\User"/>
     </php>
 </phpunit>
